# 15_puzzle

./: CMakeLists.txt  README.md  main.cpp
gamelib/: CMakeLists.txt  GameBoard.cpp  GameBoard.h
qml/: CMakeLists.txt  GameBoard.qml  Tile.qml  main.qml
